--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,7 +49,7 @@ body {
     align-items: center;
 }
 
-#myCartButton{
+.myCartButton{
     display: flex;
     border: none;
     background: green;
@@ -86,14 +86,14 @@ body {
     align-items: center;
 }
 
-#mainContent {
+.mainContent {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
 }
 
-#mainContentDetails{
+.mainContentDetails{
     display: flex;
     border-left: 1px solid grey;
     border-right: 1px solid grey;
@@ -101,7 +101,7 @@ body {
    /* border: 2px solid grey;*/
 }
 
-#sidebar{
+.sidebar{
     display: flex;
     flex-direction: column;
 }
@@ -137,7 +137,7 @@ body {
     display: flex;
 }
 
-#centerBar{
+.centerBar{
     flex-grow: 2;
 }
 
@@ -161,7 +161,7 @@ body {
     margin-right: 1rem;
 }
 
-#productsToBeDisplayed{
+.productsToBeDisplayed{
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
